[package]
name = "crsp-base"
version = "0.1.0"
edition = "2018"
description = "CHIP-8 processor emulation base for crsp"
license = "MIT"
repository = "https://github.com/hcsch/crsp/"
keywords = ["emulator", "chip-8"]
categories = ["emulators"]

[dependencies]
num_enum = "0.5.1"
rand = "0.8.3"
thiserror = "1.0.25"
static_assertions = "1.1.0"
derive_more = "0.99.14"
